--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.8",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
@@ -22,7 +23,11 @@
     "@mikro-orm/core": "^6.0.2",
     "@mikro-orm/migrations": "^6.0.2",
     "@mikro-orm/postgresql": "^6.0.2",
-    "pg": "^8.11.3"
+    "apollo-server-express": "^3.13.0",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "pg": "^8.11.3",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
