--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@mikro-orm/postgresql": "^6.0.2",
     "apollo-server-express": "^3.13.0",
     "express": "^4.18.2",
-    "graphql": "^16.8.1",
+    "graphql": "15.8.0",
     "pg": "^8.11.3",
+    "prettier": "^3.2.1",
+    "reflect-metadata": "^0.2.1",
     "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
