--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "create:migration": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "@mikro-orm/migrations": "^6.0.2",
     "@mikro-orm/postgresql": "^6.0.2",
     "apollo-server-express": "^3.13.0",
+    "argon2": "^0.31.2",
     "express": "^4.18.2",
     "graphql": "15.8.0",
     "pg": "^8.11.3",
