--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/node": "^20.10.8",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
@@ -26,10 +27,13 @@
     "@mikro-orm/postgresql": "^6.0.2",
     "apollo-server-express": "^3.13.0",
     "argon2": "^0.31.2",
+    "connect-redis": "^7.1.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "graphql": "15.8.0",
     "pg": "^8.11.3",
     "prettier": "^3.2.1",
+    "redis": "^4.6.12",
     "reflect-metadata": "^0.2.1",
     "type-graphql": "^1.1.1"
   },
