--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/node": "^20.10.8",
@@ -28,6 +29,7 @@
     "apollo-server-express": "^3.13.0",
     "argon2": "^0.31.2",
     "connect-redis": "^7.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "15.8.0",
