--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "baseUrl": ".",
-    "typeRoots": ["./typing-stubs", "./node_modules/@types"]
+    "typeRoots": ["./typing-stubs", "./node_modules/@types"],
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts"],
 }
