--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/node": "^20.10.8",
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
@@ -33,6 +34,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "15.8.0",
+    "nodemailer": "^6.9.9",
     "pg": "^8.11.3",
     "prettier": "^3.2.1",
     "redis": "^4.6.12",
