--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "argon2": "^0.31.2",
     "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
