--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "graphql": "15.8.0",
     "ioredis": "^5.3.2",
     "nodemailer": "^6.9.9",
+    "obscenity": "^0.2.1",
     "pg": "^8.11.3",
     "prettier": "^3.2.1",
     "reflect-metadata": "^0.2.1",
