--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "dataloader": "^2.2.2",
     "dotenv": "^16.4.5",
+    "dotenv-safe": "^9.1.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "15.8.0",
