--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "gen-env": "npx gen-env-types .env -o src/env.d.ts -e ."
   },
   "keywords": [],
   "author": "",
@@ -29,7 +30,6 @@
     "cors": "^2.8.5",
     "dataloader": "^2.2.2",
     "dotenv": "^16.4.5",
-    "dotenv-safe": "^9.1.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "15.8.0",
