--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
+    "@types/graphql-upload": "^16.0.7",
     "@types/node": "^20.10.8",
     "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.2",
@@ -24,6 +25,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.11.0",
     "apollo-server-express": "^3.13.0",
     "argon2": "^0.31.2",
     "connect-redis": "^7.1.1",
@@ -33,6 +35,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "15.8.0",
+    "graphql-upload": "^16.0.2",
     "ioredis": "^5.3.2",
     "nodemailer": "^6.9.9",
     "obscenity": "^0.2.1",
