--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "15.8.0",
-    "graphql-upload": "^16.0.2",
+    "graphql-upload": "13",
     "ioredis": "^5.3.2",
     "nodemailer": "^6.9.9",
     "obscenity": "^0.2.1",
