--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
-    "@types/graphql-upload": "^16.0.7",
     "@types/node": "^20.10.8",
     "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.2",
@@ -26,6 +25,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.11.0",
+    "@types/graphql-upload": "8.0.12",
     "apollo-server-express": "^3.13.0",
     "argon2": "^0.31.2",
     "connect-redis": "^7.1.1",
